[package]
name = "organization-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.12"
juniper_warp = "0.7.0"
sqlx = { version = "0.7.3", features = [
	"runtime-tokio",
	"postgres",
	"migrate",
	"macros",
	"uuid",
] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
uuid = "1.7.0"
warp = "0.3.6"
